Add controllers and services.
